Fixed clipping on submenu icon

--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ button .subnav {
     justify-items: center;
     background: url(./images/chevron_right.svg);
     width: 2em;
-    height: 1.5em;
+    height: 1.7em;
 }
 
 .subnav[aria-expanded="true"]{
